# study_langchain_v1

./: .env  .env.example  main.py  pyproject.toml
src/: debug_env.py
src/langchain_v1/: config.py  main.py
src/langchain_v1/config/: __init__.py  models.py  pydantic_config_backup.py  settings.py
